# zolal

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE
cmake/: zolal-version.cmake
docs/: _config.yml  index.markdown
docs/_book/ch1/: index.md  step0.md  step1.md  step2.md
docs/_book/ch2/: dependencies.md  executable.md  index.md  library.md  package.md
docs/_book/ch3/: index.md  message.md
docs/_book/reference_manual/: executable.md  index.md  message.md  package.md
docs/_includes/: book_sidebar.html
docs/_layouts/: default.html
docs/_plugins/: z_lexer.rb
docs/assets/css/: blueberry-syntax.css  blueberry-theme.css
example/: main.zz  manifest.toml
include/zolal/: DirectiveLexer.hpp  Manifest.hpp  Preprocessor.hpp
src/: DirectiveLexer.cpp  Manifest.cpp  Preprocessor.cpp  main.cpp  static.cpp
